# nuedc-asset-library

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md
00_docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  STM32代码库API.md  三单片机平台差异对照表.md  三轮迭代综合报告.md  仿真与验证API.md  全局进度报告_第一轮.md  全局进度报告_第二轮.md  前沿算法吸收报告.md  报告模板库API.md  控制算法库API.md  最终质量报告.md  模块接口一致性验证报告.md  电赛资产库快速使用指南.md  电路模板库API.md  硬件文档验证报告.md  硬件模块库API.md  第一轮迭代总结报告.md  第三轮真题方案与应急手册补充报告.md  第三轮算法扩展报告.md  第三轮迭代总结报告.md  第二轮前沿算法实现报告.md  第二轮文档深化报告.md  第二轮迭代总结报告.md  系统建模与仿真验证报告.md  系统架构API.md  视觉代码库API.md  迭代优化总结报告.md
01_stm32/: README.md
02_mspm0g3507/: API速查表.md  NAMING_CONVENTION.md  README.md  STM32_vs_MSPM0_PLATFORM_DIFF.md
03_hardware_modules/: PCB打样指南.md  PCB设计通用规范.md  PCB设计速查指南.md  README.md  常用芯片速查手册.md  焊接调试指南.md  电机选型指南.md  电源设计完全指南.md  电赛PCB设计速查卡.md  电赛三天采购清单.md  电赛器件选型速查卡.md  电赛备赛清单.md  电赛常用传感器接口速查卡.md  电赛常用传感器选型指南.md  电赛常用保护器件速查卡.md  电赛常用元件清单.md  电赛常用天线速查卡.md  电赛常用存储模块速查卡.md  电赛常用工具使用指南.md  电赛常用工具清单.md  电赛常用执行器速查卡.md  电赛常用散热方案速查卡.md  电赛常用显示模块速查卡.md  电赛常用晶振选型指南.md  电赛常用滤波器选型指南.md  电赛常用电机驱动速查卡.md  电赛常用电池选型指南.md  电赛常用电源模块速查卡.md  电赛常用连接器速查卡.md  电赛常用通信接口速查卡.md  电赛常用通信模块速查卡.md  电赛物料清单模板.md  硬件故障排查手册.md  硬件模块红黑榜.md  结构件设计指南.md  通信协议指南.md
04_tm4c123/: README.md  STM32_vs_TM4C_PLATFORM_DIFF.md
05_orangepi5/: README.md  serial_protocol.py  visual_control_bridge.py  视觉调试工具箱.py
06_circuit_templates/: MSPM0G3507最小系统电路.md  Orange_Pi_5接口电路.md  README.md  STM32最小系统电路.md  TM4C123最小系统电路.md  USB3.0相机接口电路.md  传感器接口电路设计指南.md  传感器电路模板.md  (+31 more)
08_vision_drivers/camera_cpp/: CMakeLists.txt  camera_driver.cpp
(+1662 files in other folders)
